December 17th, 2016 20hr30

--- a/src/main/recontool/WEB-INF/web.xml
+++ b/src/main/recontool/WEB-INF/web.xml
@@ -69,7 +69,7 @@
     </servlet-mapping>
     <filter>
         <filter-name>RequestFilter</filter-name>
-        <filter-class>com.namaraka.recon.RequestFilter</filter-class>
+        <filter-class>com.namaraka.recon.filters.RequestFilter</filter-class>
         <async-supported>true</async-supported>
     </filter>
     <filter-mapping>
